# uvc2http

./: AppMain.cpp  Buffer.h  CMakeLists.txt  Config.cpp  Config.h  DaemonMain.cpp  HttpServer.cpp  HttpServer.h  Main.cpp  MjpegUtils.cpp  MjpegUtils.h  README.md  StreamFunc.cpp  StreamFunc.h  Tracer.cpp  Tracer.h  UvcGrabber.cpp  UvcGrabber.h
OpenWrt-15.05/package/uvc2http/: Makefile
OpenWrt-15.05/package/uvc2http/files/: uvc2http.config
